--- a/src/Components/Directory.scss
+++ b/src/Components/Directory.scss
@@ -1,4 +1,4 @@
-
+/* Global Styles */
 body {
     margin: 0;
     min-height: 100vh;
@@ -10,6 +10,7 @@ main {
     min-height: 100vh;
 }
 
+/* File Styles */
 .file {
     margin-inline-start: 20px;
     color: #FFF;
@@ -19,6 +20,7 @@ main {
     color: green;
 }
 
+/* Button Styles */
 .btn {
     background-color: transparent;
     border: none;
@@ -26,62 +28,62 @@ main {
     cursor: pointer;
     display: flex;
     align-items: center;
-    &.folder , &.file {
-        padding: 5px 20px;
-        border-radius: 10px;
-        margin-bottom: 20px;
-    }
-    &.folder {
-        font-size: 20px;
-        font-weight: 600;
-        color: #007acc;
-    }
-    & + .btn.folder {
-        margin-inline-start: 20px;
-    }
-    &.file {
-        font-size: 15px;
-        color: #FFF;
-    }
-    .icon {
-        margin-inline-end: 10px;
-    } 
 }
 
+.btn.folder, .btn.file {
+    padding: 5px 20px;
+    border-radius: 10px;
+    margin-bottom: 20px;
+}
 
+.btn.folder {
+    font-size: 20px;
+    font-weight: 600;
+    color: #007acc;
+}
+
+.btn + .btn.folder {
+    margin-inline-start: 20px;
+}
+
+.btn.file {
+    font-size: 15px;
+    color: #FFF;
+}
+
+.btn .icon {
+    margin-inline-end: 10px;
+}
+
+/* Root Styles */
 .root {
     display: flex;
     flex-direction: column;
     width: fit-content;
-    & > * {
-        margin-inline-start: 30px;
-    }
 }
 
-[data-collapsed='true'] {
-    & > .btn.folder {
-        font-weight: bold;
-        font-size: 22px;
-        opacity: 0.5;
-    }
-    .root , .file {
-        display: none;
-        overflow: hidden;
-    }
+.root > * {
+    margin-inline-start: 30px;
 }
 
-.modal {
+/* Collapsed State Styles */
+[data-collapsed='true'] > .btn.folder {
+    font-weight: bold;
+    font-size: 22px;
+    opacity: 0.5;
+}
+
+[data-collapsed='true'] .root, [data-collapsed='true'] .file {
     display: none;
-    color: #Fff;
-    &.show {
-        display: flex;
-    }
+    overflow: hidden;
 }
 
+/* Action Wrapper Styles */
 .action_wrapper {
     display: flex;
     margin-inline-start: 20px;
-    .btn {
-        padding: 0;
-    }
+}
+
+.action_wrapper .btn {
+    padding: 0;
 }
